# capnprotols

./: .rustfmt.toml  Cargo.toml  README.md  build.rs
examples/: dbg_idx.rs
extension/: README.md  package.json  tsconfig.json
extension/src/: extension.ts
src/: aliases.rs  capnpfmt.rs  compiler.rs  config.rs  diagnostics.rs  document.rs  format.rs  index.rs  main.rs  ordinals.rs  schema_capnp.rs  semantic_tokens.rs  server.rs
tests/: integration.rs
tests/common/: mod.rs
tests/fixtures/: types.capnp  user.capnp
