[package]
name = "capnprotols"
version = "0.1.0"
edition = "2021"
description = "Language server for Cap'n Proto schema files"
license = "MIT"

[[bin]]
name = "capnprotols"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "process", "sync", "time", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ropey = "1.6"
dashmap = "5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
capnp = "0.25"
tree-sitter = "0.20"
tree-sitter-capnp = "1.5"

[build-dependencies]
capnpc = "0.25"
